--- a/index.html
+++ b/index.html
@@ -1,67 +1,23 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <!-- Meta data section -->
-  <meta charset="utf-8">
-  <meta name="description" content="{desc}, Using Javascript">
-  <meta name="keywords" content="immaculata, icd2o">
-  <meta name="author" content="Atri Sarker">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./fav_index/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./fav_index/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./fav_index/favicon-16x16.png">
-  <link rel="manifest" href="./fav_index/site.webmanifest">
-
-  <!-- CSS -->
-  <link rel="stylesheet" href="./css/style.css">
-
-  <!-- MDL -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
-  <!-- Title -->
-  <title>{title} in JS</title>
-</head>
-
-<body>
-
-  <!-- Script -->
-  <script defer src="./js/script.js"></script>
-
-  <!-- Header -->
-  <h1>{title} in JS</h1>
-
-  <!-- INPUT FORM [used for form validation] -->
-  <form id="inputForm">
-    <!-- Table For Layout -->
-    <table>
-      <tr>
-        <td>
-          <!--  {value} Input -->
-          <label for="{value}Input">{value}:</label>
-          <input id="{value}Input" type="number" name="{value}" value="" step="0.01" min="" max="" />
-          <br>
-        </td>
-        <td>
-          <!-- Image of JS LOGO -->
-          <img class="contentImg" src="./images/jsLogo.png" alt="javascript Logo!">
-          <br>
-        </td>
-      </tr>
-    </table>
-
-    <!-- Results Button -->
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit"
-      value="submit" id="resultBtn">Get Result!</button>
-  </form>
-
-  <!-- Result -->
-  <p><b id="outputResult"> </b> </p>
-
-</body>
-
+  <head>
+    <!-- Meta data section -->
+    <meta charset="utf-8">
+    <meta name="description" content="Penelope Armadillo Game">
+    <meta name="keywords" content="immaculata, icd2o">
+    <meta name="author" content="Niko">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./fav_index/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./fav_index/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./fav_index/favicon-16x16.png">
+    <link rel="manifest" href="./fav_index/site.webmanifest">
+    <!-- Title -->
+    <title>Penelope Beard Grabber</title>
+  </head>
+  <body>
+    <!-- Script -->
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
+    <script type="module" src="js/game.js"></script>
+  </body>
 </html>
