--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Meta data section -->
     <meta charset="utf-8">
     <meta name="description" content="Penelope Armadillo Game">
-    <meta name="keywords" content="immaculata, icd2o">
+    <meta name="keywords" content="immaculata, icd2o, penelope">
     <meta name="author" content="Niko">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
