--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./fav_index/favicon-16x16.png">
     <link rel="manifest" href="./fav_index/site.webmanifest">
     <!-- Title -->
-    <title>Penelope Beard Grabber</title>
+    <title>Penelope: A Quest for Beards</title>
   </head>
   <body>
     <!-- Script -->
